methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:6: error: type mismatch;
 found   : Unit
 required: Int
  recule()
        ^